k8s/example-mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  replicas: 3
  serviceName: mariadb-headless
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.5
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 200m


---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-headless
  labels:
    app: mariadb
spec:
  ports:
  - name: mariadb
    port: 3306
  clusterIP: None
  selector:
    app: mariadb

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-servcie
spec:
  selector:
    app: mariadb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
