k8s/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: maraidb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.5
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: mariadb-volume
        ports:
        - containerPort: 3306
      volumes:
        - name: mariadb-volume
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
---

apiVersion: v1
kind: Service
metadata:
  name: mariadb-servcie
spec:
  selector:
    app: mariadb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
