k8s/proxy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-app-deployment
  labels: 
    app: proxy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-app
  template:
    metadata:
      labels:
        app: proxy-app
    spec:
      containers:
      - name: proxy-app
        image: yzhbankov/proxy-app
        ports:
        - containerPort: 3002
          name: server-port
        - containerPort: 7001
          name: zmq-port-7001
        - containerPort: 7002
          name: zmq-port-7002
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  selector:
    app: proxy-app
  type: LoadBalancer
  ports:
  - protocol: TCP
    name: http-3002
    port: 3002
    targetPort: 3002
    nodePort: 30003
  - protocol: TCP
    name: tcp-7001
    port: 7001
    targetPort: 7001
  - protocol: TCP
    name: tcp-7002
    port: 7002
    targetPort: 7002
