k8s/pull-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pull-app-deployment
  labels: 
    app: pull-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pull-app
  template:
    metadata:
      labels:
        app: pull-app
    spec:
      containers:
      - name: pull-app
        image: yzhbankov/pull-app
        ports:
        - containerPort: 3000
          name: node-port
        - containerPort: 7001
          name: zmq-port
---

apiVersion: v1
kind: Service
metadata:
  name: pull-service
spec:
  selector:
    app: pull-app
  type: LoadBalancer
  ports:
  - protocol: TCP
    name: http-3000
    port: 3000
    targetPort: 3000
    nodePort: 30001
  - protocol: TCP
    name: tcp-7001
    port: 7001
    targetPort: 7001
