k8s/push-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push-app-deployment
  labels: 
    app: push-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: push-app
  template:
    metadata:
      labels:
        app: push-app
    spec:
      containers:
      - name: push-app
        image: yzhbankov/push-app
        ports:
        - containerPort: 3001
          name: server-port
        - containerPort: 7001
          name: zmq-port
---
apiVersion: v1
kind: Service
metadata:
  name: push-service
spec:
  selector:
    app: push-app
  type: LoadBalancer
  ports:
  - protocol: TCP
    name: http-3001
    port: 3001
    targetPort: 3001
    nodePort: 30002
  - protocol: TCP
    name: tcp-7001
    port: 7001
    targetPort: 7001
