k8s/pull-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pull-ingress
spec:
  rules:
  - host: "pull-zmq.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pull-service
            port:
              number: 3000
