k8s/push-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: push-ingress
spec:
  rules:
  - host: "push-zmq.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: push-service
            port:
              number: 3001
