k8s/sub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sub-ingress
spec:
  rules:
  - host: "sub-app.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sub-service
            port:
              number: 3000
